<resources>
    <string name="app_name">Reason Web</string>
    <string name="main_title">Reason Web</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="save_profile">Save Changes</string>
    <string name="cancel">Cancel</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="LoginBtn">Log In</string>
    <string name="SignupBtn">Sign Up</string>

    <string name="P1">Premise 2</string>
    <string name="P2">Premise 1</string>
    <string name="prop">Prop</string>

    <string name="submit_term">Submit Term</string>
    <string name="submit_syll">Submit Syllogism</string>
    <string name="submit_evid">Submit Evidence</string>
    <string name="submit_prop">Submit Proposition</string>

    <string-array name="type_array">
        <item>Noun</item>
        <item>Verb</item>
        <item>Adjective</item>
    </string-array>
    <string-array name="verb_s_array">
        <item>is</item>
        <item>has</item>
        <item>makes</item>
    </string-array>
    <string-array name="verb_p_array">
        <item>are</item>
        <item>have</item>
        <item>make</item>
    </string-array>
    <string-array name="helpers_1s_array">
        <item> </item>
        <item>is</item>
        <item>can</item>
        <item>should</item>
    </string-array>
    <string-array name="helpers_1p_array">
        <item> </item>
        <item>are</item>
        <item>can</item>
        <item>should</item>
    </string-array>
    <string-array name="helpers_2s_array">
        <item>is</item>
        <item>can be</item>
        <item>should be</item>
    </string-array>
    <string-array name="helpers_2p_array">
        <item>are</item>
        <item>can be</item>
        <item>should be</item>
    </string-array>
    <string-array name="helpers_3s_array">
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
    <string-array name="helpers_3p_array">
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
    <string-array name="prepositions">
        <item>to</item>
        <item>at</item>
        <item>for</item>
        <item>on</item>
        <item>around</item>
        <item>above</item>
        <item>below</item>
        <item>in</item>
        <item>between</item>
    </string-array>
</resources>
