<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.elevenfifty.reasonweb.ViewPropActivity">
    <item android:id="@+id/search_menu_item"
        android:title="@string/search"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />
    <item android:id="@+id/profile_menu_item"
        android:title="@string/profile"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item android:id="@+id/logout_menu_item"
        android:title="@string/logout"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>