<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:title="@string/main_title"
        app:subtitleTextAppearance="@color/header"
        app:titleTextAppearance="@color/header"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.parse.ParseImageView
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:src="@mipmap/leibniz"
                android:layout_margin="10dp"
                android:id="@+id/avatar_image"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/username_text"
                android:textColor="@color/header"
                android:text="Username"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:layout_below="@id/avatar_image"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_edit"
                android:inputType="textEmailAddress"
                android:textColor="@color/header"
                android:text="E-mail Address"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:layout_margin="10dp"
                android:layout_below="@id/username_text"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/fullname"
                android:layout_below="@id/email_edit"
                android:gravity="center_horizontal">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstname_edit"
                    android:inputType="textCapWords"
                    android:textColor="@color/header"
                    android:text="First Name"
                    android:textSize="16sp"
                    android:layout_margin="10dp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastname_edit"
                    android:inputType="textCapWords"
                    android:textColor="@color/header"
                    android:text="Last Name"
                    android:textSize="16sp"
                    android:layout_margin="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/fullname"
                android:weightSum="2">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:layout_margin="10dp" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/save_profile"
                    android:text="@string/save_profile"
                    android:layout_margin="10dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>